--- a/test/vs2019/etl.vcxproj
+++ b/test/vs2019/etl.vcxproj
@@ -1347,6 +1347,7 @@
     <ClInclude Include="..\..\include\etl\mutex\mutex_clang_sync.h" />
     <ClInclude Include="..\..\include\etl\mutex\mutex_freertos.h" />
     <ClInclude Include="..\..\include\etl\negative.h" />
+    <ClInclude Include="..\..\include\etl\persistence.h" />
     <ClInclude Include="..\..\include\etl\placement_new.h" />
     <ClInclude Include="..\..\include\etl\null_type.h" />
     <ClInclude Include="..\..\include\etl\parameter_pack.h" />
@@ -4888,6 +4889,7 @@
     <ClCompile Include="..\test_parameter_type.cpp" />
     <ClCompile Include="..\test_parity_checksum.cpp" />
     <ClCompile Include="..\test_pearson.cpp" />
+    <ClCompile Include="..\test_persistence.cpp" />
     <ClCompile Include="..\test_pool.cpp" />
     <ClCompile Include="..\test_quantize.cpp" />
     <ClCompile Include="..\test_queue_lockable.cpp" />
