--- a/test/vs2019/etl.vcxproj.filters
+++ b/test/vs2019/etl.vcxproj.filters
@@ -118,6 +118,9 @@
     <Filter Include="ETL\Arduino\Examples\Vector_Examples\Example_Vector_1_simple_use">
       <UniqueIdentifier>{0e4d2126-b9b7-4eef-b5ca-18363b1e01ce}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ETL\Experimental">
+      <UniqueIdentifier>{5e2143e6-30f1-4934-bf95-6d1791d01cc2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\etl\enum_type.h">
@@ -1118,6 +1121,12 @@
     </ClInclude>
     <ClInclude Include="..\..\include\etl\persistence.h">
       <Filter>ETL\Utilities</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\etl\experimental\persistence.h">
+      <Filter>ETL\Experimental</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\etl\experimental\icache.h">
+      <Filter>ETL\Experimental</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
