Work in progress
Add peristence to sanity checks.
Set string length peristence as uint32_t

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -166,6 +166,7 @@ set(TEST_SOURCE_FILES
 	test_parameter_type.cpp
 	test_parity_checksum.cpp
 	test_pearson.cpp
+	test_persistence.cpp
 	test_pool.cpp
 	test_priority_queue.cpp
 	test_quantize.cpp
