--- a/.gitignore
+++ b/.gitignore
@@ -315,3 +315,5 @@ test/sanity-check/c++17/Makefile
 test/vs2019/Debug LLVM
 test/vs2019/DebugLLVMNoSTL
 test/vs2019/DebugNoSTL
+test/vs2019/cmake-build
+test/vs2019/Debug MSVC - No STL - Built-ins
