--- a/test/vs2019/etl.vcxproj
+++ b/test/vs2019/etl.vcxproj
@@ -1819,6 +1819,7 @@
     <ClInclude Include="..\..\include\etl\mutex\mutex_clang_sync.h" />
     <ClInclude Include="..\..\include\etl\mutex\mutex_freertos.h" />
     <ClInclude Include="..\..\include\etl\negative.h" />
+    <ClInclude Include="..\..\include\etl\object_allocator.h" />
     <ClInclude Include="..\..\include\etl\overload.h" />
     <ClInclude Include="..\..\include\etl\placement_new.h" />
     <ClInclude Include="..\..\include\etl\null_type.h" />
